--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "phaser"
+            ],
             "outputPath": "dist/angular-phaser-boilerplate",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -27,7 +30,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/phaser/dist/phaser.min.js"
+            ]
           },
           "configurations": {
             "production": {
